[gd_scene load_steps=3 format=3 uid="uid://bhobp18oo1inu"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_v52rw"]
[ext_resource type="Theme" uid="uid://boae5h5x4m1gb" path="res://Themes/buttons.tres" id="2_efu3m"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_v52rw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 5000.0
offset_bottom = 100.0
color = Color(0.165656, 0.165656, 0.165656, 1)

[node name="PlayerHealth" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 5.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Health:"
horizontal_alignment = 1

[node name="PlayerMana" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_right = 240.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Mana:"
horizontal_alignment = 1

[node name="PlayerBarrier" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 50.0
offset_right = 5.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Barrier:"
horizontal_alignment = 1

[node name="Gold" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -5.0
offset_top = 50.0
offset_right = 240.0
offset_bottom = 95.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Gold: "
horizontal_alignment = 1

[node name="EnemyHealth1" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "#/#"
horizontal_alignment = 1

[node name="EnemyHealth2" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "#/#"
horizontal_alignment = 1

[node name="EnemyHealth3" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "#/#"
horizontal_alignment = 1

[node name="EnemyHP1" type="ProgressBar" parent="."]
self_modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -45.0
offset_right = 50.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0
value = 100.0
show_percentage = false

[node name="EnemyHP2" type="ProgressBar" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -45.0
offset_right = 50.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0
value = 100.0
show_percentage = false

[node name="EnemyHP3" type="ProgressBar" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -45.0
offset_right = 50.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
step = 1.0
value = 100.0
show_percentage = false

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -110.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="Skills1" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Attacks"

[node name="Skills2" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -80.0
offset_right = 210.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Spells"

[node name="Skills3" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Potions"

[node name="Retreat" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Retreat"

[node name="Skills1" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -110.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="Skill11" type="Button" parent="Skills1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Stab"

[node name="Skill12" type="Button" parent="Skills1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -80.0
offset_right = 210.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Slash"

[node name="Skill13" type="Button" parent="Skills1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")

[node name="Back1" type="Button" parent="Skills1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Back"

[node name="Skills2" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -110.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="Skill21" type="Button" parent="Skills2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Fireball"

[node name="Skill22" type="Button" parent="Skills2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -80.0
offset_right = 210.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Frostbolt"

[node name="Skill23" type="Button" parent="Skills2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")

[node name="Back2" type="Button" parent="Skills2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Back"

[node name="Skills3" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -110.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 0

[node name="Skill31" type="Button" parent="Skills3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Healing"

[node name="Skill32" type="Button" parent="Skills3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -80.0
offset_right = 210.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")

[node name="Skill33" type="Button" parent="Skills3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")

[node name="Back3" type="Button" parent="Skills3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_efu3m")
text = "Back"

[connection signal="pressed" from="Main/Skills1" to="." method="_on_skills_1_pressed"]
[connection signal="pressed" from="Main/Skills2" to="." method="_on_skills_2_pressed"]
[connection signal="pressed" from="Main/Skills3" to="." method="_on_skills_3_pressed"]
[connection signal="pressed" from="Main/Retreat" to="." method="_on_retreat_pressed"]
[connection signal="pressed" from="Skills1/Skill11" to="." method="_on_skill_11_pressed"]
[connection signal="pressed" from="Skills1/Skill12" to="." method="_on_skill_12_pressed"]
[connection signal="pressed" from="Skills1/Skill13" to="." method="_on_skill_13_pressed"]
[connection signal="pressed" from="Skills1/Back1" to="." method="_on_back_1_pressed"]
[connection signal="pressed" from="Skills2/Skill21" to="." method="_on_skill_21_pressed"]
[connection signal="pressed" from="Skills2/Skill22" to="." method="_on_skill_22_pressed"]
[connection signal="pressed" from="Skills2/Skill23" to="." method="_on_skill_23_pressed"]
[connection signal="pressed" from="Skills2/Back2" to="." method="_on_back_2_pressed"]
[connection signal="pressed" from="Skills3/Skill31" to="." method="_on_skill_31_pressed"]
[connection signal="pressed" from="Skills3/Skill32" to="." method="_on_skill_32_pressed"]
[connection signal="pressed" from="Skills3/Skill33" to="." method="_on_skill_33_pressed"]
[connection signal="pressed" from="Skills3/Back3" to="." method="_on_back_3_pressed"]
